# Survey-Agent4

./: .env.example  .gitignore  LICENSE  LLM_Methodological_Gap_Report.md  README.md  methodological_gap_analysis_report.md  pyproject.toml  requirements.txt  run_webapp.bat  test_preprocess.js  test_table.html
backend/: config.py  main.py
backend/events/: stream_manager.py
backend/routers/: reports.py  tasks.py
backend/schemas/: models.py
backend/services/: crew_executor.py  task_reader.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: Layout.tsx  LogViewer.tsx  MarkdownRenderer.tsx  TaskCard.tsx
frontend/src/pages/: HomePage.tsx  ReportPage.tsx  TaskStatusPage.tsx
src/: cli.py  main.py
src/agents/: analyzer_agent.py  filter_agent.py  manager_agent.py  router_agent.py  searcher_agent.py  synthesizer_agent.py
src/crews/: __init__.py  research_gap_crew.py
src/prompts/: __init__.py  gap_taxonomy.py
src/storage/: __init__.py  task_storage.py  tool_wrapper.py
src/tools/: __init__.py  arxiv_download.py  arxiv_search.py  classify_relevance.py  extract_method.py  identify_gap.py  pdf_to_text.py  semantic_scholar_search.py  write_report.py
tests/: conftest.py  test_analyzer.py  test_e2e.py  test_filter.py  test_router.py  test_searcher.py
