[project]
name = "research-gap-analysis"
version = "0.1.0"
description = "Multi-agent research gap analysis system based on CrewAI and arXiv"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "crewai>=0.80.0",
    "crewai-tools>=0.20.0",
    "arxiv>=1.4.0",
    "pdfplumber>=0.10.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
research-gap = "src.main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
